Bugfix: current cycle overflow on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,6 +275,7 @@ li {
     justify-content: center;
     align-items: center;
     gap: 0.5rem;
+    flex-wrap: wrap;
     padding-inline: 5%;
 }
 #divCurrentCycle .element-img {
